# ucc

./: Makefile.am  README  TODO  aminclude.am  configure.ac
doc/: Doxyfile.in
lib/: Makefile.am
lib/argp/: .gitignore  ChangeLog  Makefile.am  argp-fmtstream.h  argp-help.c  argp-parse.c  configure.ac  mempcpy.c  strchrnul.c
lib/command/: Makefile.am
lib/command/include/command/: basic-command.hh  boolean-command.hh  callback-command.hh  command.hh  unifier-command.hh
lib/command/src/: basic-command.cc  boolean-command.cc  callback-command.cc  command.cc  unifier-command.cc
lib/misc/: Makefile.am  constness.hh  error.hh  error.hxx
lib/misc/include/misc/: color.hh  constness.hh  diagnostic-reporter.hh  diagnostic.hh  error.hh  error.hxx  indent.hh  location.hh  position.hh  scope-map.hh  scope-map.hxx  symbol.hh  symbol.hxx
lib/misc/src/: diagnostic-reporter.cc  indent.cc  symbol.cc
tests/: Makefile.am  testme.conf  testme.py
tests/ucc/analysis/bad/: uninitialized-var-1.c  uninitialized-var-2.c  uninitialized-var-3.c
tests/ucc/analysis/good/: initialized-var-1.c  uninitialized-global-var.c
tests/ucc/bind/bad/: break-in-main.c  continue-in-main.c  continue-in-switch.c  enum-redef-member.c  enum-redef.c  fun-redef.c  fun-vs-var-global.c  goto-no-label.c  redef-label.c  redef-same-scope-1.c  redef-same-scope.c  redef-type-to-var.c  redef-var-1.c  struct-in-struct.c  struct-redef.c  struct-vs-enum.c  undefined-var.c  union-vs-var.c
tests/ucc/bind/good/: break-in-do-while.c  break-in-for.c  break-in-switch.c  break-in-while.c  continue-break-switch-for.c  continue-in-do-while.c  continue-in-for.c  continue-in-while.c  enum-1.c  enum-vs-struct.c  enum.c  fun-proto.c  fun-vs-var.c  fun-with-args-2.c  goto-1.c  goto-2.c  goto-3.c  incomplete-type-ptr-2.c  redef-diff-scope.c  same-var-diff-scope.c  simple-type.c  struct.c  type-vs-var.c  var-equal-var.c
tests/ucc/dump/input/: array-type.c  call-expr.c  char-implicit-int.c  char-vs-short-vs-int.c  continue.c  elipsis.c  long-long-vs-int-1.c  long-long-vs-int.c  multiple-typedef.c
tests/ucc/dump/output/: array-type.c  assignements.c  basic-main.c  break.c  call-expr.c  cast.c  char-implicit-int.c  char-vs-short-vs-int.c  conditional-expr.c  continue.c  elipsis.c  long-long-vs-int-1.c  long-long-vs-int.c  multiple-typedef.c  reverse-array-1.c  reverse-array.c
tests/ucc/parse/bad/: enum-no-semi.c  fun-declaration-list.c  label-no-stmt.c  type-1.c  type-2.c  type-3.c  typedef-initializer.c  typedef-wrong-combination.c  unterminated-func.c
tests/ucc/parse/good/: enum-vs-var.c  fun-no-ret-type.c  simple-printf-malloc-strlen.c
tests/ucc/pretty/input/: array-type.c  assignements.c  break.c  cast.c  conditional-expr.c  enum-2.c  enum-typedef.c  enum-var-1.c  enum-var.c  enum.c  for.c  fun-call.c  global-vars.c  goto-label-stmt.c  if.c  long-double.c  main-no-ret-type.c  op-expr.c  pointer-decl.c  record-typedef.c  simple-do-while.c  simple-switch.c  simple-while.c  sizeof.c  struct-union-1.c  struct-union-2.c  struct-union-3.c  struct-union-4.c  struct-union-6.c  struct-union.c  struct-var-1.c  union-var.c  (+5 more)
ucc/: Makefile.am
ucc/include/: ucc.hh
ucc/include/analysis/: uninitialized-variables.hh
ucc/include/ast/: all.hh  any-list.hh  any-list.hxx  array-ty.hh  array-type.hh  assign-expr.hh  ast-dumper.hh  ast.hh  ast.hxx  break-stmt.hh  call-expr.hh  case-stmt.hh  cast-expr.hh  compound-stmt.hh  conditional-expr.hh  continue-stmt.hh  decl-specifier.hh  decl.hh  declarator.hh  default-stmt.hh  default-visitor.hh  default-visitor.hxx  do-while-stmt.hh  enum-decl.hh  enum-expr-decl.hh  enum-expr.hh  enum-ty.hh  enum-type.hh  expr.hh  field-decl.hh  float-expr.hh  for-stmt.hh  function-decl.hh  function-ty.hh  function-type.hh  fwd.hh  goto-stmt.hh  if-stmt.hh  implicit-cast-expr.hh  init-list-expr.hh  (+29 more)
ucc/include/bind/: binder.hh
ucc/include/ir/: array-type.hh  basic-block.hh  binary-inst.hh  constant.hh  context.hh  fragment.hh  function-type.hh  function.hh  global-value.hh  global-variable.hh  instruction.hh  int-type.hh  ir-generator.hh  ptr-type.hh  struct-type.hh  type.hh  unit.hh  use.hh  value.hh  visitor.hh  visitor.hxx
ucc/include/parse/: driver.hh
ucc/include/type/: array.hh  builtin-type.hh  const.hh  field.hh  floating-point.hh  function.hh  integer.hh  named.hh  number.hh  ptr.hh  record.hh  signed-integer.hh  signed-number.hh  type-checker.hh  type.hh  unsigned-integer.hh  unsigned-number.hh
ucc/src/: command.cc  main.cc  ucc.cc
ucc/src/analysis/: command.cc  uninitialized-variables.cc
ucc/src/ast/: array-ty.cc  array-type.cc  assign-expr.cc  ast-dumper.cc  ast.cc  break-stmt.cc  call-expr.cc  case-stmt.cc  cast-expr.cc  command.cc  compound-stmt.cc  conditional-expr.cc  continue-stmt.cc  decl-specifier.cc  decl.cc  declarator.cc  default-stmt.cc  do-while-stmt.cc  enum-decl.cc  enum-expr-decl.cc  enum-expr.cc  enum-ty.cc  enum-type.cc  expr.cc  field-decl.cc  float-expr.cc  for-stmt.cc  function-decl.cc  function-ty.cc  function-type.cc  goto-stmt.cc  if-stmt.cc  implicit-cast-expr.cc  init-list-expr.cc  int-expr.cc  label-stmt.cc  member-expr.cc  named-type.cc  op-expr.cc  pretty-printer.cc  (+19 more)
ucc/src/bind/: binder.cc  command.cc
ucc/src/ir/: array-type.cc  basic-block.cc  binary-inst.cc  command.cc  context.cc  function-type.cc  function.cc  global-variable.cc  ir-generator.cc  ptr-type.cc  struct-type.cc  type.cc  unit.cc  value.cc
ucc/src/parse/: c-lexer.ll  c-parser.yy  command.cc  driver.cc
ucc/src/type/: array.cc  builtin-type.cc  command.cc  const.cc  floating-point.cc  function.cc  ptr.cc  record.cc  signed-integer.cc  type-checker.cc  type.cc  unsigned-integer.cc
ucpp/: Makefile.am
ucpp/include/: basic-command.hh  callback-command.hh  command.hh  lexer-state.hh  lexer-state.hxx  macro.hh  macro.hxx  token.hh  token.hxx  ucpp-lexer.hh  ucpp-lexer.hxx  ucpp-parser.hh  ucpp-process.hh  ucpp-process.hxx  ucpp.hh
ucpp/src/: basic-command.cc  callback-command.cc  command.cc  lexer-state.cc  macro.cc  main.cc  token.cc  ucpp-lexer.cc  ucpp-parser.cc  ucpp-process.cc  ucpp.cc
(+145 files in other folders)
