AC_PREREQ([2.69])

AC_INIT([ucc], [0.1], [b.covolato@gmail.com])
AM_INIT_AUTOMAKE([foreign -Wall -Werror subdir-objects color-tests])

# Checks for programs.
AC_LANG([C++])

AC_PROG_CXX
AC_PROG_YACC
AC_PROG_LEX

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

AC_CONFIG_HEADERS([config.h])

AC_CONFIG_FILES([Makefile ucpp/Makefile tests/Makefile])

AC_OUTPUT
