AM_CXXFLAGS = -std=c++11 -Wall -Wextra
AM_CPPFLAGS = -Iinclude
bin_PROGRAMS = ucpp
ucpp_SOURCES = src/main.cc \
			   src/ucpp.cc \
			   src/command.cc \
			   src/basic-command.cc \
			   src/callback-command.cc \
			   src/macro.cc \
			   src/token.cc \
			   src/lexer-state.cc \
			   src/ucpp-lexer.cc \
			   src/ucpp-process.cc
